# Core

./: .gitignore  CMakeLists.txt
Core/: CMakeLists.txt
Core/include/: Serializable.h
